--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=0.6">
   <meta name="twitter:title" content="About Me">
 <meta name="twitter:description" content="my about me :3">
-<meta name="twitter:image" content="profile-pic.jpg">
+<meta name="twitter:image" content="https://ibb.co/3vxTm57">
 <meta name="twitter:card" content="large-image.gif">
      <link rel="stylesheet" href="style.css">
 <link rel="icon" type="image/png" href="favicon.png">
