--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
      <title>About Me</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=0.6">
-  <meta name="twitter:title" content="About Me">
-<meta name="twitter:description" content="my about me :3">
-<meta name="twitter:image" content="https://i.ibb.co/f93XdV2/94f5b880435f7889f7f90f5710d220df.jpg">
-<meta name="twitter:card" content="large-image.gif">
+  <meta property="og:title" content="About Me" />
+<meta property="og:type" content="my infomation :3" />
+<meta property="og:url" content="https://coconut7373.github.io/about" />
+<meta property="og:image" content="https://i.ibb.co/f93XdV2/94f5b880435f7889f7f90f5710d220df.jpg" />
      <link rel="stylesheet" href="style.css">
 <link rel="icon" type="image/png" href="favicon.png">
   <!--
