--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=0.6">
   <meta property="og:title" content="About Me" />
 <meta property="og:type" content="about me" />
-<meta property="oh:description" content=" my information :3" />
+<meta name="twitter:description" content=" my information :3 ">
 <meta property="og:url" content="https://coconut7373.github.io/about" />
 <meta property="og:image" content="https://i.ibb.co/f93XdV2/94f5b880435f7889f7f90f5710d220df.jpg" />
      <link rel="stylesheet" href="style.css">
